--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -1,17 +1,14 @@
 <Window xmlns="https://github.com/avaloniaui"
+        xmlns:rxui="clr-namespace:Avalonia;assembly=Avalonia.ReactiveUI"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:LinCon.Avalonia.ViewModels;assembly=LinCon.Avalonia"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="LinCon.Avalonia.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="LinCon.Avalonia">
-
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+        Title="LinCon">
+    <Grid>
+        <rxui:RoutedViewHost Router="{Binding Router}">
+           
+        </rxui:RoutedViewHost>
+    </Grid>
 </Window>
