--- a/LinCon.Avalonia/Views/MenuView.xaml
+++ b/LinCon.Avalonia/Views/MenuView.xaml
@@ -10,9 +10,9 @@
         <StackPanel Grid.Column="1"
                 VerticalAlignment="Center"
                 Spacing="30">
-            <Button>View Cases</Button>
-            <Button>Export Case</Button>
-            <Button>Import Case</Button>
+            <Button Command="{Binding GoCaseExplorerView}" >View Cases</Button>
+            <Button Command="{Binding GoCaseExportView}">Export Case</Button>
+            <Button Command="{Binding GoCaseImportView}">Import Case</Button>
         </StackPanel>
     </Grid>
 </UserControl>
