--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -7,6 +7,7 @@
         x:Class="LinCon.Avalonia.Views.MainWindow"
         Title="LinCon">
     <Grid>
+        <Button VerticalAlignment="Top" Height="30" Width="100" HorizontalAlignment="Left" Command="{Binding GoBack}">Go Back</Button>
         <rxui:RoutedViewHost Router="{Binding Router}">
            
         </rxui:RoutedViewHost>
