--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -1,9 +1,18 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseImportView">
-    <StackPanel HorizontalAlignment="Center"
-                VerticalAlignment="Center">
-        <TextBlock Text="Hi, I'm the CaseImport view!" />
-        <TextBlock Text="{Binding UrlPathSegment}" />
+    <StackPanel Orientation="Vertical" Spacing="4">
+        <StackPanel Orientation="Vertical"
+                Margin="0,16,0,0"
+                HorizontalAlignment="Center"
+                Spacing="16">
+            <Border Background="{DynamicResource ThemeAccentBrush2}" Padding="16" 
+                    DragDrop.AllowDrop="True">
+                <TextBlock Name="DropState">Drop some text or files here</TextBlock>
+            </Border>
+            <TextBlock HorizontalAlignment="Center">Drag Cases here</TextBlock>
+            <TextBlock HorizontalAlignment="Center">or</TextBlock>
+            <Button>Choose from your Computer</Button>
+        </StackPanel>
     </StackPanel>
 </UserControl>
