Bind ImportCommand to a Button in the CaseImportView

--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -12,7 +12,7 @@
             </Border>
             <TextBlock HorizontalAlignment="Center">Drag Cases here</TextBlock>
             <TextBlock HorizontalAlignment="Center">or</TextBlock>
-            <Button>Choose from your Computer</Button>
+            <Button Command="{Binding ImportCommand}">Choose from your Computer</Button>
         </StackPanel>
     </StackPanel>
 </UserControl>
