--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -1,7 +1,7 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseImportView">
-    <StackPanel Orientation="Vertical" Spacing="4">
+    <StackPanel VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
         <StackPanel Orientation="Vertical"
                 Margin="0,16,0,0"
                 HorizontalAlignment="Center"
