Inject ICaseExpoter and implement ExportCasesCommand and Bind it to View

--- a/LinCon.Avalonia/Views/CaseExportView.xaml
+++ b/LinCon.Avalonia/Views/CaseExportView.xaml
@@ -19,7 +19,7 @@
                 <Button Command="{Binding OpenSaveFileDialogCommand}">Browse...</Button>
                 <TextBox Text="{Binding ExportPath}"/>
             </StackPanel>
-            <Button>Submit</Button>
+            <Button Command="{Binding ExportCasesCommand}">Submit</Button>
         </StackPanel>
     </StackPanel>
 </UserControl>
