--- a/LinCon.Avalonia/Views/CaseExportView.xaml
+++ b/LinCon.Avalonia/Views/CaseExportView.xaml
@@ -8,10 +8,12 @@
                 Spacing="16">
             <TextBlock>Check the cases which you want to export</TextBlock>
             <ScrollViewer Height="100">
-                <ListBox>
-                    <CheckBox>Case 1</CheckBox>
-                    <CheckBox>Case 2</CheckBox>
-                    <CheckBox>Case 3</CheckBox>
+                <ListBox Items="{Binding Cases}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
             </ScrollViewer>
             <TextBlock>Export here</TextBlock>
