--- a/LinCon.Avalonia/Views/CaseExplorerView.xaml
+++ b/LinCon.Avalonia/Views/CaseExplorerView.xaml
@@ -1,6 +1,5 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Name="Root"
              x:Class="LinCon.Avalonia.Views.CaseExplorerView">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
         <TextBlock>Your cases</TextBlock>
@@ -17,7 +16,7 @@
                             <StackPanel Spacing="15" Orientation="Horizontal">
                                 <Button>View more</Button>
                                 <Button>Open Links</Button>
-                                <Button Command="{Binding #Root.DataContext.DeleteCommand}">Delete</Button>
+                                <Button Command="{Binding $parent[ItemsControl].DataContext.DeleteCommand}">Delete</Button>
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
