--- a/LinCon.Avalonia/Views/CaseExplorerView.xaml
+++ b/LinCon.Avalonia/Views/CaseExplorerView.xaml
@@ -15,7 +15,7 @@
                             <TextBlock Text="{Binding Name}"/>
                             <StackPanel Spacing="15" Orientation="Horizontal">
                                 <Button>View more</Button>
-                                <Button>Open Links</Button>
+                                <Button CommandParameter="{Binding ID}" Command="{Binding $parent[ItemsControl].DataContext.ExecuteCaseCommand}">Open Links</Button>
                                 <Button CommandParameter="{Binding ID}" Command="{Binding $parent[ItemsControl].DataContext.DeleteCommand}">Delete</Button>
                             </StackPanel>
                         </StackPanel>
