Create AddLinkCommand that routes to AddLinkView and bind it toe CaseView

--- a/LinCon.Avalonia/Views/CaseView.xaml
+++ b/LinCon.Avalonia/Views/CaseView.xaml
@@ -1,10 +1,11 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:rxui="clr-namespace:Avalonia;assembly=Avalonia.ReactiveUI"
              x:Class="LinCon.Avalonia.Views.CaseView">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
         <TextBlock Text="{Binding Case.Name}"/>
         <StackPanel Orientation="Horizontal">
-            <Button>Add link</Button>
+            <Button Command="{Binding AddLinkCommand}">Add link</Button>
             <Button Command="{Binding OpenAllLinksCommand}">Open links</Button>
             <Button>Delete...</Button>
         </StackPanel>
@@ -20,5 +21,6 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>            
         </ItemsControl>
+        <rxui:RoutedViewHost Router="{Binding Router}"/>
     </StackPanel>
 </UserControl>
