--- a/LinCon.Avalonia/Views/AddLinkView.xaml
+++ b/LinCon.Avalonia/Views/AddLinkView.xaml
@@ -2,6 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.AddLinkView">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-       <TextBlock>Hi</TextBlock>
+       <TextBlock>Link</TextBlock>
+       <TextBox Text="{Binding Link, Mode=TwoWay}"/>
+       <TextBlock>Name</TextBlock>
+       <TextBox Text="{Binding Name, Mode=TwoWay}"/>
+       <StackPanel Orientation="Horizontal">
+            <Button Command="{Binding AddLinkCommand}">Add</Button>
+            <Button Command="{Binding ReturnCommand}">Cancel</Button>
+       </StackPanel>
     </StackPanel>
 </UserControl>
