--- a/LinCon.Avalonia/Views/EditLinkView.xaml
+++ b/LinCon.Avalonia/Views/EditLinkView.xaml
@@ -2,12 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.EditLinkView">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-       <TextBlock>Link</TextBlock>
+       <TextBlock>New Link</TextBlock>
        <TextBox Text="{Binding Link, Mode=TwoWay}"/>
-       <TextBlock>Name</TextBlock>
+       <TextBlock>New Name</TextBlock>
        <TextBox Text="{Binding Name, Mode=TwoWay}"/>
        <StackPanel Orientation="Horizontal">
-            <Button Command="{Binding AddLinkCommand}">Add</Button>
+            <Button Command="{Binding EditLinkCommand}">Add</Button>
             <Button Command="{Binding ReturnCommand}">Cancel</Button>
        </StackPanel>
     </StackPanel>
