--- a/LinCon.Avalonia/Views/CaseView.xaml
+++ b/LinCon.Avalonia/Views/CaseView.xaml
@@ -13,7 +13,7 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding }"/>
+                        <TextBlock Text="{Binding Name}"/>
                         <Button CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.OpenLinkCommand}">Open</Button>
                         <Button CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.EditLinkCommand}">Edit</Button>
                         <Button CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.DeleteLinkCommand}">Delete</Button>
