Add a List of DeleteLinkItems to DeleteManyLinksViewModel and bind it to the View

--- a/LinCon.Avalonia/Views/DeleteManyLinksView.xaml
+++ b/LinCon.Avalonia/Views/DeleteManyLinksView.xaml
@@ -2,6 +2,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.DeleteManyLinksView">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-        <TextBlock>Hi</TextBlock>
+        <TextBlock>Select the links which you want to delete</TextBlock>
+        <ScrollViewer>
+            <ListBox Items="{Binding DeleteLinkItems}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </ScrollViewer>
+        <StackPanel Orientation="Horizontal">
+            <Button>Delete</Button>
+            <Button>Cancel</Button>
+        </StackPanel>
     </StackPanel>
 </UserControl>
