Implement DeleteManyCommand and bind it to the View

--- a/LinCon.Avalonia/Views/DeleteManyLinksView.xaml
+++ b/LinCon.Avalonia/Views/DeleteManyLinksView.xaml
@@ -13,7 +13,7 @@
             </ListBox>
         </ScrollViewer>
         <StackPanel Orientation="Horizontal">
-            <Button>Delete</Button>
+            <Button Command="{Binding DeleteManyCommand}">Delete</Button>
             <Button Command="{Binding ReturnCommand}">Cancel</Button>
         </StackPanel>
     </StackPanel>
