Create and Bind a command inside CaseExplorerView that redirects to DeleteManyCasesViewModel

--- a/LinCon.Avalonia/Views/CaseExplorerView.xaml
+++ b/LinCon.Avalonia/Views/CaseExplorerView.xaml
@@ -6,7 +6,7 @@
         <TextBlock>Your cases</TextBlock>
         <StackPanel Orientation="Horizontal" Spacing="15">
             <Button Command="{Binding AddCommand}">Add Case</Button>
-            <Button>Delete Cases</Button>
+            <Button Command="{Binding DeleteManyCasesCommand}">Delete Cases</Button>
         </StackPanel>
         <ScrollViewer>
             <ItemsControl Items="{Binding Cases}">
