--- a/LinCon.Avalonia/Views/AddCaseView.xaml
+++ b/LinCon.Avalonia/Views/AddCaseView.xaml
@@ -5,7 +5,7 @@
        <TextBlock>Name</TextBlock>
        <TextBox Text="{Binding Name, Mode=TwoWay}"/>
        <StackPanel Orientation="Horizontal">
-            <Button Command="{Binding AddLinkCommand}">Add</Button>
+            <Button Command="{Binding AddCommand}">Add</Button>
             <Button Command="{Binding ReturnCommand}">Cancel</Button>
        </StackPanel>
     </StackPanel>
