--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -1,18 +1,33 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseImportView">
-    <StackPanel VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-        <StackPanel Orientation="Vertical"
-                Margin="0,16,0,0"
-                HorizontalAlignment="Center"
-                Spacing="16">
-            <Border Background="{DynamicResource ThemeAccentBrush2}" Padding="16" 
-                    DragDrop.AllowDrop="True">
-                <TextBlock Name="DropState">Drop some text or files here</TextBlock>
+    <UserControl.Styles>
+      <Style Selector="Button.fromComputerBtn">
+        <Setter Property="Background" Value="#0097A7"/>
+        <Setter Property="Foreground" Value="White"/>
+      </Style>
+      <Style Selector=".fromComputerBtn /template/ ContentPresenter">
+        <Setter Property="CornerRadius" Value="15"/>
+      </Style>
+    </UserControl.Styles>
+    <Border Width="1088" Height="600" CornerRadius="15" BorderBrush="White" BorderThickness="1" Background="White">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="70"/>
+            </Grid.RowDefinitions>
+            <Border Name="DropState" Background="Transparent" DragDrop.AllowDrop="True">
+                <StackPanel Name="DragState" Spacing="60" VerticalAlignment="Center" Orientation="Vertical">
+                    <Path Name="Path" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5 0.5" Width="60" Height="75" Fill="Black" Data="F1 M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-180v8c0 6.6-5.4 12-12 12h-68v68c0 6.6-5.4 12-12 12h-8c-6.6 0-12-5.4-12-12v-68h-68c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h68v-68c0-6.6 5.4-12 12-12h8c6.6 0 12 5.4 12 12v68h68c6.6 0 12 5.4 12 12z">
+                        <Path.RenderTransform>
+                            <ScaleTransform ScaleX="0.2" ScaleY="0.2"/>
+                        </Path.RenderTransform>
+                    </Path>
+                    <TextBlock FontSize="30" HorizontalAlignment="Center">Drag Cases here</TextBlock>
+                    <TextBlock FontSize="30" HorizontalAlignment="Center">or</TextBlock>
+                </StackPanel>
             </Border>
-            <TextBlock HorizontalAlignment="Center">Drag Cases here</TextBlock>
-            <TextBlock HorizontalAlignment="Center">or</TextBlock>
-            <Button Command="{Binding ImportCommand}">Choose from your Computer</Button>
-        </StackPanel>
-    </StackPanel>
+            <Button FontSize="30" Grid.Row="1" Classes="fromComputerBtn" HorizontalAlignment="Stretch" Command="{Binding ImportCommand}">Choose from your Computer</Button>
+        </Grid>
+    </Border>
 </UserControl>
