--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -5,6 +5,7 @@
       <Style Selector="Button.fromComputerBtn">
         <Setter Property="Background" Value="#0097A7"/>
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
       </Style>
       <Style Selector=".fromComputerBtn /template/ ContentPresenter">
         <Setter Property="CornerRadius" Value="15"/>
@@ -18,7 +19,7 @@
                 <RowDefinition Height="70"/>
             </Grid.RowDefinitions>
             <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
-                <Button Command="{Binding ReturnCommand}" Width="50">
+                <Button Classes="back" Cursor="Hand" Command="{Binding ReturnCommand}" Width="50">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Path RenderTransformOrigin="0.5 0.5" Fill="Black" Data="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
