--- a/LinCon.Avalonia/Views/MenuView.xaml
+++ b/LinCon.Avalonia/Views/MenuView.xaml
@@ -11,6 +11,7 @@
         <Setter Property="Padding" Value="6"/>
         <Setter Property="Background" Value="#0097A7"/>
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
       </Style>
 
       <Style Selector="Button.menuItem /template/ ContentPresenter">
