--- a/LinCon.Avalonia/Views/MainWindow.xaml
+++ b/LinCon.Avalonia/Views/MainWindow.xaml
@@ -9,14 +9,20 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="LinCon.Avalonia.Views.MainWindow"
         Title="LinCon">
-     <Grid RowDefinitions="5,*,5" ColumnDefinitions="5,*,5">
-        <DockPanel  Grid.Column="1"  Grid.Row="1" >
-            <Grid Name="TitleBar" Background="LightBlue" DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
-                <TextBlock VerticalAlignment="Center" Margin="5,0,0,0">Title</TextBlock>
+     <Grid RowDefinitions="5,*,5" ColumnDefinitions="2,*,2">
+        <DockPanel Grid.Column="1" Grid.Row="1" >
+            <Grid Margin="-5 -5 -5 0" Height="40" Name="TitleBar" Background="White" DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
+                <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">LinCon - Your Research Container</TextBlock>
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
                     <StackPanel.Styles>
                         <Style Selector="Button">
-                            <Setter Property="Margin" Value="2"/>
+                            <Setter Property="Background" Value="Transparent"></Setter>
+                            <Setter Property="Cursor" Value="Hand"></Setter>
+                            <Setter Property="Width" Value="50"></Setter>
+                            <Setter Property="BorderThickness" Value="0"></Setter>
+                        </Style>
+                        <Style Selector="Button:pointerover">
+                            <Setter Property="Background" Value="#EEEEEE"></Setter>
                         </Style>
                     </StackPanel.Styles>
                     <Button Name="MinimizeButton">_</Button>
@@ -26,13 +32,13 @@
             </Grid>
             <rxui:RoutedViewHost Router="{Binding Router}"/>
         </DockPanel>
-        <Border Name="TopLeft" Background="Red"/>
-        <Border Name="TopRight" Background="Red" Grid.Column="2" />
-        <Border Name="BottomLeft" Background="Red" Grid.Row="2" />
-        <Border Name="BottomRight" Background="Red"  Grid.Row="2" Grid.Column="2"/>
-        <Border Name="Top" Background="Blue" Grid.Column="1" />
-        <Border Name="Right" Background="Blue" Grid.Row="1"  Grid.Column="2" />
-        <Border Name="Bottom" Background="Blue" Grid.Row="2" Grid.Column="1"  />
-        <Border Name="Left" Background="Blue"  Grid.Row="1" />
+        <Border Name="TopLeft" Background="White"/>
+        <Border Name="TopRight" Background="Transparent" Grid.Column="2" />
+        <Border Name="BottomLeft" Background="Transparent" Grid.Row="2" />
+        <Border Name="BottomRight" Background="Transparent"  Grid.Row="2" Grid.Column="2"/>
+        <Border Name="Top" Background="Transparent" Grid.Column="1" />
+        <Border Name="Right" Background="Transparent" Grid.Row="1"  Grid.Column="2" />
+        <Border Name="Bottom" Background="Transparent" Grid.Row="2" Grid.Column="1"  />
+        <Border Name="Left" Background="White"  Grid.Row="1" />
     </Grid>
 </Window>
