--- a/LinCon.Avalonia/Views/CaseExportView.xaml
+++ b/LinCon.Avalonia/Views/CaseExportView.xaml
@@ -1,27 +1,57 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseExportView">
-    <StackPanel VerticalAlignment="Center" Orientation="Vertical" Spacing="4">
-        <StackPanel Orientation="Vertical"
-                Margin="0,16,0,0"
-                HorizontalAlignment="Center"
-                Spacing="16">
-            <TextBlock>Check the cases which you want to export</TextBlock>
-            <ScrollViewer Height="100">
-                <ListBox Items="{Binding Cases}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-            </ScrollViewer>
-            <TextBlock>Export here</TextBlock>
-            <StackPanel Orientation="Horizontal">
-                <Button Command="{Binding OpenSaveFileDialogCommand}">Browse...</Button>
-                <TextBox Text="{Binding ExportPath}"/>
+    <UserControl.Styles>
+      <Style Selector="Button.exportBtn">
+        <Setter Property="Background" Value="#0097A7"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
+      </Style>
+      <Style Selector=".exportBtn /template/ ContentPresenter">
+        <Setter Property="CornerRadius" Value="15"/>
+      </Style>
+    
+      <Style Selector="Button.browseBtn">
+        <Setter Property="Background" Value="#0097A7"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Cursor" Value="Hand"></Setter>
+      </Style>
+      <Style Selector=".browseBtn /template/ ContentPresenter">
+        <Setter Property="CornerRadius" Value="5 0 0 5"/>
+      </Style>
+
+    </UserControl.Styles>
+    <Border Width="1088" Height="600" Background="White" CornerRadius="15">
+        <Grid RowDefinitions="* 70">     
+            <StackPanel Spacing="40" Margin="0 30 0 0">
+                <TextBlock HorizontalAlignment="Center">Check the cases which you want to export</TextBlock>
+                <StackPanel Margin="50 0 50 0" Spacing="20">
+                    <ScrollViewer Height="100">
+                        <ItemsControl  Items="{Binding Cases}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <CheckBox Margin="0 15 0 0" IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </ScrollViewer>
+                    <TextBlock>Export here</TextBlock>
+                    <Grid Height="40" ColumnDefinitions="Auto *">
+                        <Button Width="40" Classes="browseBtn" Command="{Binding OpenSaveFileDialogCommand}">
+                            <Path HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5 0.5" Fill="White" Data="M464 128H272l-54.63-54.63c-6-6-14.14-9.37-22.63-9.37H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48zm0 272H48V112h140.12l54.63 54.63c6 6 14.14 9.37 22.63 9.37H464v224z">
+                                <Path.RenderTransform>
+                                    <ScaleTransform ScaleX="0.05" ScaleY="0.05"/>
+                                </Path.RenderTransform>
+                            </Path>
+                        </Button>
+                        <Border CornerRadius="0 5 5 0" BorderThickness="1" BorderBrush="#EEEEEE" Background="#EEEEEE" Grid.Column="1">
+                            <TextBox VerticalAlignment="Center" BorderThickness="0" Background="Transparent" Text="{Binding ExportPath}"/>
+                        </Border>
+                    </Grid>
+                </StackPanel>
             </StackPanel>
-            <Button Command="{Binding ExportCasesCommand}">Submit</Button>
-        </StackPanel>
-    </StackPanel>
+            <Button FontSize="30" Grid.Row="2" Classes="exportBtn" Command="{Binding ExportCasesCommand}">Export</Button>
+        </Grid>
+    </Border>
 </UserControl>
