--- a/LinCon.Avalonia/Views/DeleteManyCasesView.xaml
+++ b/LinCon.Avalonia/Views/DeleteManyCasesView.xaml
@@ -1,23 +1,58 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.DeleteManyCasesView">
+    <UserControl.Styles>
+        <Style Selector="Button">
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+        <Style Selector="Button.greenBtn">
+            <Setter Property="Background" Value="#00796B"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.greenBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0 30 0 30"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.redBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="Red"/>
+            <Setter Property="Padding" Value="20 10 20 10"/>
+        </Style>
+        <Style Selector="Button.redBtn /template/ ContentPresenter">
+            <Setter Property="CornerRadius" Value="0"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.closeBtn">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+    </UserControl.Styles>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid Background="Black" Opacity="0.5"/>
-        <Border Padding="30" CornerRadius="15" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
-            <StackPanel Spacing="15" Orientation="Vertical">
-                <TextBlock>Select the links which you want to delete</TextBlock>
-                <ScrollViewer>
-                    <ListBox Items="{Binding CaseItems}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </ScrollViewer>
-                <StackPanel HorizontalAlignment="Center" Spacing="10" Orientation="Horizontal">
-                    <Button Command="{Binding DeleteManyCommand}">Delete</Button>
-                    <Button Command="{Binding ReturnCommand}">Cancel</Button>
+        <Border Padding="30 0 30 30" CornerRadius="5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+            <StackPanel Spacing="30" Orientation="Vertical">
+                <Border Margin="-30 0 -30 0" Background="#EEEEEE" CornerRadius="5 5 0 0">
+                    <Grid Height="40" ColumnDefinitions="* 50">
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Column="0">Delete many Cases</TextBlock>
+                        <Button Classes="closeBtn" Grid.Column="1" Command="{Binding ReturnCommand}">X</Button>
+                    </Grid>
+                </Border>
+                <StackPanel Spacing="30" Orientation="Vertical">
+                    <TextBlock>Select the Cases which you want to delete</TextBlock>
+                    <ScrollViewer HorizontalAlignment="Stretch" Height="200">
+                        <ItemsControl BorderThickness="0" Items="{Binding CaseItems}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <CheckBox Margin="0 15 0 0" IsChecked="{Binding IsChecked, Mode=TwoWay}" Content="{Binding Name}"></CheckBox>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </ScrollViewer>
+                    <StackPanel HorizontalAlignment="Center" Spacing="20" Orientation="Horizontal">
+                        <Button Classes="redBtn" Command="{Binding DeleteManyCommand}">Delete</Button>
+                        <Button Classes="greenBtn" Command="{Binding ReturnCommand}">Cancel</Button>
+                    </StackPanel>
                 </StackPanel>
             </StackPanel>
         </Border>
